# llm-wiki

./: .env.example  .gitignore  .npmrc  7za_wrapper.cmd  CLAUDE.md  README.md  _e2e_rag.py  _fc.py  _fix2.py  _fix_tests.py  _main_backup.py  _make_rag.py  _make_rag_api.py  _p2.py  _patch_rag.py  _write_docs.py  evil.txt  package-lock.json  package.json  pyproject.toml  settings.json.example
api/: __init__.py  branch.py  entity.py  graph.py  impact.py  rag.py  webhook.py  wiki.py  workbench.py
app/: main.py  main.py.bak
core/: __init__.py  config.py  git.py  graph_engine.py  llm.py  rag.py  watcher.py  wiki_io.py
docs/: migration-react.md  rag-plan.md  requirements.md  tasks.md  testing.md
electron/: main.js  preload.js
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
raw/: 2025-01-14_1035_vue-component-refactor-copy-mode-fix.md  2025-05-20_1035_vue-component-refactor-copy-mode-fix.md  2025-05-20_1430_register_form_draft.md  2026-05-13_1026_promotion_tracking_export.md  2026-05-13_1100_promotion_dynamic_search_options.md  2026-05-13_1435_promotion_export_csv.md  2026-05-14_1600_promotion_list_export_filter.md  20260106_154500_promotion-copy-code-duplicate-bug.md  BP数 与 Sample数 详细解释.md  PROMOTION_BACKEND_LOGIC_DETAIL.md  PROMOTION_SYSTEM_TECHNICAL_SPEC.md  Product List 与 Product Category 分析.md  UnitOfWork 解释.md  evil.txt  mamba-paper.md  promotion 与 promotion code 两张表.md  test-upload.txt  transformer-paper.md  分析 Percentage Discount, Fixed Amount Discount, Per Fixed Amount Discount 是什么概念.md  测试文档.md  (+2 more)
(+161 files in other folders)
