[project]
name = "llm-wiki-1"
version = "0.1.0"
description = ""
authors = [
    {name = "charles.feng",email = "charles.feng@quintarabio.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14.1 || >3.14.1"
dependencies = [
    "fastapi (>=0.136.3,<0.137.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "openai (>=2.41.0,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "gitpython (>=3.1.50,<4.0.0)",
    "tree-sitter (>=0.25.2,<0.26.0)",
    "aiofiles (>=25.1.0,<26.0.0)",
    "networkx (>=3.6.1,<4.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "tiktoken (>=0.13.0,<0.14.0)",
    "pyyaml (>=6.0.3,<7.0.0)"
]

[tool.poetry]
packages = [{include = "llm_wiki_1", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
